--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,10 @@
 <body>
   <h1>Wortratespiel</h1>
   <p>Spieler in der Lobby: <span id="playerCount">0</span></p>
+  <ul id="playerList"></ul>
   <button onclick="readyUp()">Bereit!</button>
+  <button onclick="restartGame()">Neustart</button>
+
 
   <script src="/socket.io/socket.io.js"></script>
   <script src="script.js"></script>
